@@ -70,7 +70,7 @@ public class ShipmentDriverService {
         if (employees == null || employees.isEmpty()) {
             throw new AppException(EmployeeErrorCode.EMPLOYEE_NOT_FOUND);
         }
-        return employees.get(0);
+        return employees.getFirst();
     }
 
     @Transactional
